login and logout features,modal,slide

--- a/video-wrapper.html
+++ b/video-wrapper.html
@@ -961,4 +961,7 @@ A whole new concept, removeAttribute() allows you to remove entire HTML attribut
 document.getElementById("adiv").removeAttribute("style")
 </script>
 
+<img width="500" height="500" sizes="(max-width: 500px) 100vw, 500px" srcset="https://koenig-media.raywenderlich.com/uploads/2017/08/AutoLayout-feature.png 500w, https://koenig-media.raywenderlich.com/uploads/2017/08/AutoLayout-feature-250x250.png 250w, https://koenig-media.raywenderlich.com/uploads/2017/08/AutoLayout-feature-320x320.png 320w, https://koenig-media.raywenderlich.com/uploads/2017/08/AutoLayout-feature-32x32.png 32w, https://koenig-media.raywenderlich.com/uploads/2017/08/AutoLayout-feature-50x50.png 50w, https://koenig-media.raywenderlich.com/uploads/2017/08/AutoLayout-feature-64x64.png 64w, https://koenig-media.raywenderlich.com/uploads/2017/08/AutoLayout-feature-96x96.png 96w, https://koenig-media.raywenderlich.com/uploads/2017/08/AutoLayout-feature-128x128.png 128w" alt="" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" src="https://koenig-media.raywenderlich.com/uploads/2017/08/AutoLayout-feature.png">
+
+
 
